--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,84 @@
+@use "themes" as *;
+
+@use "@nebular/theme/styles/globals" as *;
+@use "@nebular/auth/styles/globals" as *;
+
+@include nb-install() {
+  @include nb-theme-global();
+  @include nb-auth-global();
+}
 /* You can add global styles to this file, and also import other style files */
+
+/* GOOGLE FONTS */
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap");
+
+/* VARIABLE CSS */
+:root {
+  --header-height: 3rem;
+
+  /* COLORS */
+  /* Color mode HSL(hue, saturation, lightness) */
+  // --hue: 0;
+  // --sat: 0%;
+  // --title-color: hsl(var(--hue), var(--sat), 20%);
+  // --title-color-dark: hsl(var(--hue), var(--sat), 0%);
+  // --text-color: hsl(var(--hue), var(--sat), 46%);
+  // --body-color: hsl(var(--hue), var(--sat), 98%);
+  --container-color: #fff;
+  --color-green: #0f393a;
+  /* Font and Typography */
+  --body-font: "Poppins", sans-serif;
+
+  /* .5rem = 8px | 1 rem =16px */
+  --big-font-size: 3.5rem;
+  --h1-font-size: 2.25rem;
+  --h2-font-size: 1.5rem;
+  --h3-font-size: 1.25rem;
+  --normal-font-size: 1rem;
+  --small-font-size: 0.875rem;
+  --smaller-font-size: 0.813rem;
+  --tiny-font-size: 0.625rem;
+
+  /* Font Weight */
+  --font-normal: 400;
+  --font-medium: 500;
+  --font-semi-bold: 600;
+
+  /* Margenes Bottom */
+  --mb-0-25: 0.25rem;
+  --mb-0-5: 0.5rem;
+  --mb-0-75: 0.75rem;
+  --mb-1: 1rem;
+  --mb-1-5: 1.5rem;
+  --mb-2: 2rem;
+  --mb-2-5: 2.5rem;
+  --mb-3: 3rem;
+
+  /* z index */
+  --z-tooltip: 10;
+  --z-fixed: 100;
+  --z-modal: 1000;
+}
+
+/* Base */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+body,
+button,
+input,
+textarea {
+  font-family: var(--body-font);
+  font-size: 0.88rem;
+}
+
+.active {
+  color: var(--color-green);
+}
