--- a/src/app/layouts/dashboard-layout/dashboard-layout.component.scss
+++ b/src/app/layouts/dashboard-layout/dashboard-layout.component.scss
@@ -1,12 +1,21 @@
 .dashboard-container {
   display: flex;
-  flex: 1;
   flex-direction: row;
 
   .sidebar {
+    display: flex;
+    flex-direction: column;
     background-color: #fafafa;
     height: 100vh;
     min-width: 250px;
+
+    .logo-icon {
+      margin-left: auto;
+      width: 24px;
+      display: flex;
+      align-items: center;
+      color: #abb0bd;
+    }
 
     .sidebar-logo {
       display: flex;
@@ -16,21 +25,23 @@
       font-weight: 700;
       justify-content: center;
       font-size: 1.5rem;
-
-      .logo-icon {
-        margin-left: auto;
-        width: 24px;
-        display: flex;
-        align-items: center;
-        color: #abb0bd;
-      }
+    }
+    .sidebar-footer a {
+      display: flex;
+      align-items: center;
+      margin: 1.5rem 2rem 2rem 2rem;
+      color: #0f393a;
+      font-weight: 700;
+      justify-content: center;
+      font-size: 1.5rem;
     }
 
     .sidebar-menu {
+      flex-grow: 1;
       .menu-list {
         list-style: none;
-        color: #abb0bd;
         a {
+          color: #abb0bd;
           position: relative;
           font-weight: 500;
           display: flex;
@@ -60,6 +71,7 @@
           &::before {
             background-color: #0f393a;
           }
+          color: #0f393a;
         }
         .icon-menu {
           max-width: 20px;
@@ -81,5 +93,66 @@
 
   .main {
     margin: 1.5rem;
+    flex-grow: 1;
+    .main__header {
+      display: flex;
+      .main__header-title {
+        font-weight: 500;
+      }
+      .main__header-setting {
+        position: relative;
+        margin-left: auto;
+        .btn-setting {
+          border: none;
+          background: transparent;
+          color: #abb0bd;
+          &:hover {
+            cursor: pointer;
+            // color: #0f393a;
+          }
+          .btn-setting__icon {
+            max-width: 25px;
+          }
+        }
+
+        .setting__container {
+          transition: opacity 0.3s ease-out;
+          opacity: 0;
+          position: absolute;
+          right: 0;
+          width: 200px;
+          background-color: #fff;
+          padding-top: 8px;
+          padding-bottom: 8px;
+          box-shadow: 0 2px 4px -1px #0003, 0 4px 5px #00000024,
+            0 1px 10px #0000001f;
+          border-radius: 4px;
+          outline: 0;
+          .setting__container-btn {
+            display: flex;
+            align-items: center;
+            border: none;
+            background: transparent;
+            width: 100%;
+            padding: 0.5rem 1rem;
+            &:hover {
+              cursor: pointer;
+              background-color: #fafafa;
+            }
+          }
+          li {
+            display: flex;
+            align-items: center;
+          }
+          .icon {
+            margin-right: 0.25rem;
+            display: flex;
+            align-items: center;
+            width: 20px;
+            color: #abb0bd;
+          }
+        }
+      }
+    }
   }
 }
